syntax = "proto2";

option go_package = "a.yandex-team.ru/cloud/blockstore/tools/common/go/cms/proto;kikimr";

package NKikimrConsole;

message StatusIds {
    // reserved range [400000, 400999]
    enum StatusCode {
        STATUS_CODE_UNSPECIFIED =    0;
        SUCCESS =             400000;
        BAD_REQUEST =         400010;
        UNAUTHORIZED =        400020;
        INTERNAL_ERROR =      400030;
        ABORTED =             400040;
        UNAVAILABLE =         400050;
        OVERLOADED =          400060;
        SCHEME_ERROR =        400070;
        GENERIC_ERROR =       400080;
        TIMEOUT =             400090;
        BAD_SESSION =         400100;
        PRECONDITION_FAILED = 400120;
        ALREADY_EXISTS      = 400130;
        NOT_FOUND =           400140;
        SESSION_EXPIRED =     400150;
        CANCELLED =           400160;
        UNDETERMINED =        400170;
        UNSUPPORTED =         400180;
        SESSION_BUSY =        400190;
    }
    // reserved range [401000, 402999] for internal client status
}

message TStatus {
    optional StatusIds.StatusCode Code = 1;
    optional string Reason = 2;
}
